# astra

./: README.md
docs/arc42/01_introduction_and_goals/: overview.md  quality_goals.md
runtime/: Cargo.toml
runtime/src/: lib.rs
